[package]
edition = "2021"
name = "ruc-cheese_node-srp-rs"
version = "0.0.0"
description = "High-performance SRP implementation in Rust"

[lib]
crate-type = ["cdylib"]

[dependencies]
hex = "0.4.3"
lazy_static = "1.5.0"
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = ["napi4"] }
napi-derive = "2.12.2"
num-bigint = { version = "0.4.6", features = ["rand"] }
num-traits = "0.2.19"
rand = "0.8"
sha2 = "0.10.8"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
panic = "abort"
strip = "symbols"
overflow-checks = false
